poiWithKeyVault.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "poi"
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi 
    spec:
      containers:
        - name: "poi"
          image: "testmd.azurecr.io/tripinsights/poi:latest"
          ports:
          - containerPort: 80
          volumeMounts:
          - name: secrets-store-inline
            mountPath: "/secrets"
            readOnly: true
          readinessProbe:
            httpGet:
              path: /api/poi/healthcheck
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-aksmdkv"
            nodePublishSecretRef:                       # Only required when using service principal mode
              name: secrets-store-creds                 # Only required when using service principal mode
---
apiVersion: v1
kind: Service
metadata:
    name: "poi"
    namespace: api
    labels:
        app: "poi"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "poi"
