tripviewer.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "tripviewer"
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer 
    spec:
      containers:
        - name: "tripviewer"
          image: "testmd.azurecr.io/tripinsights/tripviewer:latest"
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: "tripviewer"
    namespace : web
    labels:
        app: "tripviewer"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "tripviewer"
