user-java.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "user-java"
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java 
    spec:
      containers:
        - name: "user-java"
          image: "testmd.azurecr.io/tripinsights/user-java:latest"
          ports:
          - containerPort: 80
          readinessProbe:
            httpGet:
              path: /api/user-java/healthcheck
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 4
---
apiVersion: v1
kind: Service
metadata:
    name: "user-java"
    namespace: api
    labels:
        app: "user-java"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "user-java"
